--- a/c-project-mastermind-1/c-project-mastermind-1/MainWindow.xaml
+++ b/c-project-mastermind-1/c-project-mastermind-1/MainWindow.xaml
@@ -30,5 +30,6 @@
         <ListBox x:Name="attemptsListBox" HorizontalAlignment="Center" Height="200" VerticalAlignment="Top" Width="600" Margin="0,292,0,0" />
         <Label Content="strafpunten: 0" Name="scoreLabel" HorizontalAlignment="Center" Margin="0,261,0,0" VerticalAlignment="Top"/>
         <Button Content="Hint" Name="hintButton" HorizontalAlignment="Left" Margin="400,220,0,0" Width="180" VerticalAlignment="Top" Click="hintButtonClick"/>
+        <Label  Name="toolTipLabel" Content="Tooltip" HorizontalAlignment="Center" Margin="0,502,0,0" VerticalAlignment="Top" Height="60" Width="236" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" MouseEnter="toolTipMouseEnter" MouseLeave="toolTipMouseLeave"/>
     </Grid>
 </Window>
